fixed overflow and added dynamic colors

--- a/less/pop_up.less
+++ b/less/pop_up.less
@@ -62,6 +62,7 @@
 		border-radius: 4px;
 		margin-bottom: 10px;
 		background-color: #cdcdcd;
+		overflow: hidden;
 
 		.progress {
 			display: block;
